# medmemory-mcp

./: .gitignore  PRIVACY.md  README.md  api.py  create_sample_pdf.py  logger.py  main.py  notes.md  pyproject.toml  server.py  setup.py  test_db.py  test_vaccines.py
db/: database.py  schema.sql
ingestion/: extractor.py  vaccine_schedule.py
tests/: test_ai_extraction.py  test_extraction.py  test_openfda.py  test_visits.py
ui/: README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/labs/: page.tsx
ui/app/medications/: page.tsx
ui/app/summary/: page.tsx
ui/app/upload/: page.tsx
ui/components/: EmptyState.tsx  LoadingSpinner.tsx  Nav.tsx
