[project]
name = "medmemory-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.107.0",
    "fastapi>=0.138.2",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "sqlcipher3>=0.6.2",
    "uvicorn>=0.49.0",
]
